# pupa_counter

./: .gitignore  AGENT_HANDOFF_DETAILED_2026-04-09.md  MAINTAINER_NOTES.md  Manual_data_for_photos.xlsx  PROJECT_STATUS_2026-04-08.md  README.md  WEBCAM_ROADMAP_2026-04-09.md  counter.py  pyproject.toml  requirements.txt
configs/: base.yaml  bench_clean_pdfs_cellpose.yaml  bench_stripped_pngs_cellpose.yaml  classifier_v1.yaml  gemini_audit.yaml  gemini_probe.yaml  gemini_vision.yaml  thresholds_v1.yaml
configs/sweeps/: log_dog_v1.yaml
docs/: FRESH_START_PEAK_FIRST_2026-04-10.md  FRESH_START_V2_RESEARCH_2026-04-10.md  HANDOFF_2026-04-11_PRODUCTIZATION.md  RESPONSE_SHARPEN_2026-04-11.md
hand_labels/: corrections.csv
scripts/: bootstrap_dataset.py  build_gold_subset.py  build_hard_bank.py  extract_handlabel_crops.py  fresh_diagnostic_overlay.py  fresh_disagreement_gallery.py  generate_report.py  generate_synthetic.py  rebuild_cleaned_teacher.py  run_fresh_peak_detector.py  run_fresh_sweep.py  run_pipeline.py  seed_completion_bench.py  train_candidate_classifier.py  tune_thresholds.py  webcam_capture_loop.py
src/pupa_counter/: cli.py  (+4 more)
tests/: test_band_math.py  test_blue_mask.py  test_blue_supervision.py  test_brown_mask.py  test_cellpose_dense_patch.py  test_cellpose_dual_path.py  test_cellpose_postprocess.py  test_cellpose_split.py  test_cli_smoke.py  test_cluster_fallback.py  test_component_filter.py  test_cv_peak_deblend.py  test_overlay.py  test_paper_region.py  test_reference_view.py  test_split_clusters.py  test_vision_cluster_counter.py  test_worksheet.py
(+56 files in other folders)
